remove overflow hidden row col

--- a/src/app/components/dropdown/dropdown.component.html
+++ b/src/app/components/dropdown/dropdown.component.html
@@ -1,6 +1,7 @@
 <div class="dropdown" [ngClass]="{
     'dropdown-transparent': transparent,
     'dropdown-light': light,
+    'dropdown-dark': dark,
     'dropdown-gainsboro': gainsboro
 }">
     <button
