--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
@@ -33,15 +33,9 @@
         }
 
         &-body  {
-            display: block;
+            // display: block;
             height: 350px;
-            overflow: auto;
-        
-            tr {
-                display: table;
-                table-layout: fixed;
-                width: 100%;
-            }
+            // overflow: auto;
         }
 
         &-first-col {
