--- a/src/assets/scss/_override.scss
+++ b/src/assets/scss/_override.scss
@@ -10,6 +10,7 @@ table {
   border: none !important;
   border-bottom: 2px solid #282B3E !important;
   box-shadow: unset !important;
+  resize: none !important;
 }
 
 .container {
