--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.scss
@@ -25,11 +25,12 @@
         }
 
         &-head {
-            background-color: #EDEDED;
-            border-color: #EDEDED;
-            display: table;
-            table-layout: fixed;
-            width: 100%;
+            // background-color: #EDEDED;
+            // border-color: #EDEDED;
+            // display: table;
+            // table-layout: fixed;
+            // width: 100%;
+            padding: 0 !important;
         }
 
         &-body  {
