--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,6 +1,33 @@
 .dashboard {
+  position: relative;
   width: 100%;
+  &-panel {
+    height: 180px;
+    background-image: url('../../../assets/img/bg-summary.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 40px 0;
+
+    &-content {
+      display: flex;
+      p {
+        color: #fff;
+        &:first-child {
+          font-size: 56px;
+          margin-left: 88px;
+          margin-right: 151px;
+        }
+        &:last-child {
+          font-size: 30px;
+          span {
+            display: block;
+          }
+        }
+      }
+    }
+  }
   .group-add-btn {
+    display: flex;
     padding: 20px 40px 16px 40px;
     justify-content: flex-end;
 
@@ -8,8 +35,25 @@
       margin-left: 20px;
     }
   }
-  .badp-table {
-    padding-left: 40px;
-    padding-right: 20px;
+
+  &-group-table {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    margin-bottom: 32px;
+    width: 1200px;
+
+    .badp-table {
+      margin-right: 40px;
+    }
+    .badp-table,
+    .sedp-table {
+      flex-grow: 1;
+    }
+  }
+
+  &-statistic-table {
+    width: 1200px;
+    margin: auto;
   }
 }
