add arrow participant detail

--- a/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
+++ b/src/app/pages/badpparticipants/participant-detail/participant-detail.component.html
@@ -99,4 +99,12 @@
       </div>
     </div>
   </div>
+
+  <button class="participant-arrow participant-arrow--left">
+    <img src="/assets/img/icon-carret-right.svg" alt="">
+  </button>
+  <button class="participant-arrow participant-arrow--right">
+    <img src="/assets/img/icon-carret-right.svg" alt="">
+  </button>
+
 </div>
