--- a/src/app/pages/badpparticipants/badpparticipants.component.scss
+++ b/src/app/pages/badpparticipants/badpparticipants.component.scss
@@ -166,7 +166,11 @@
     height: 200px;
     overflow: hidden;
 
-    img {
+    > input {
+      display: none;
+    }
+
+    > img {
       height: 100%;
       object-fit: cover;
       width: 100%;
